--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "bootstrap": "^5.1.3",
+    "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.0",
     "rxjs": "~6.6.0",
